2003-03-26  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/make-syscalls.sh: When an undefined syscall has
	SOURCE=-, append its symbol names to make variable unix-stub-syscalls.
	* sysdeps/unix/Makefile [$(subdir) = misc] [unix-stub-syscalls]
	(sysdep_routines): Add stub-syscalls.
	($(objpfx)stub-syscalls.c): New target.
	(generated): Add stub-syscalls.c.

	* tls.make.c: Also define use-tls according to USE_TLS macro.

2003-03-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/bits/siginfo.h (struct siginfo): Avoid
	no-op padding element.
	* sysdeps/unix/sysv/linux/bits/siginfo.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/siginfo.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/siginfo.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/siginfo.h: Likewise.

2003-03-26  GOTO Masanori  <gotom@debian.or.jp>

	* sysdeps/unix/sysv/linux/i386/getgroups.c: Fix the error
	condition check for the return value of getgroups32.

2003-03-26  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep.h (PSEUDO_NOERRNO):
	Fix a typo.
	* sysdeps/unix/sysv/linux/sparc/sparc64/sysdep.h (PSEUDO_NOERRNO,
	PSEUDO_END_NOERRNO): Define.
	* sysdeps/unix/sysdep.h (PSEUDO_END_NOERRNO): Fix a typo.
	Define to PSEUDO_END.

2003-03-26  Ulrich Drepper  <drepper@redhat.com>

	* abilist/librt.abilist: Add new timer interfaces for 64-bit archs.

2003-03-25  Jiro SEKIBA  <jir@yamato.ibm.com>

	* iconvdata/euc-tw.c (from_euc_tw): Fix return value of TO_LOOP.
	* iconvdata/bug-iconv4.c: New file.
	* iconvdata/Makefile (tests): Add bug-iconv4.

2003-03-25  H.J. Lu  <hjl@gnu.org>

	* elf/dl-lookup.c (_dl_lookup_symbol): Avoid looking up protected
	symbols twice.
	(_dl_lookup_versioned_symbol): Likewise.

2003-03-26  Jakub Jelinek  <jakub@redhat.com>

	* csu/tst-atomic.c (do_test): Add some new
	atomic_compare_and_exchange_val_acq, atomic_add_zero,
	atomic_compare_and_exchange_bool_acq and atomic_add_negative tests.